--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "Anda",
     "license": "MIT",
     "dependencies": {
+      "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "mysql2": "^3.6.0",
       "socket.io": "^4.7.2"
