perbaikan di costumer.js

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-# Konfigurasi Database - Ganti dengan nilai yang sesuai dari penyedia database Anda
+# Konfigurasi Database - GANTI SEMUA NILAI DI BAWAH INI dengan kredensial database cloud Anda
+# PENTING: Anda harus mengganti nilai-nilai ini dengan kredensial yang sebenarnya
+# Contoh untuk PlanetScale:
+# DB_HOST=aws.connect.psdb.cloud
+# DB_USER=abcdefghijkl
+# DB_PASSWORD=pscale_pw_xxxxxxxxxxx
+# DB_NAME=antrian_online
 DB_HOST=your-database-host.com
 DB_USER=your-database-username
 DB_PASSWORD=your-database-password
